force-app/main/default/objects/Finding__c/Finding__c.object-meta.xml
<CustomObject>
    <label>Finding</label>
    <nameField>
        <label>Finding</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>