force-app/main/default/objects/Finding__c/fields/Case_Activity__c.field-meta.xml
<CustomField>
    <fullName>Case_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Activity</label>
    <referenceTo>Case_Activity__c</referenceTo>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipName>Findings</relationshipName>
    <type>Lookup</type>
</CustomField>