force-app/main/default/objects/Finding__c/fields/Reference_Documents_URL__c.field-meta.xml
<CustomField>
    <fullName>Reference_Documents_URL__c</fullName>
    <inlineHelpText>Reference Documents URL</inlineHelpText>
    <label>Reference Documents URL</label>
    <type>Url</type>
</CustomField>