force-app/main/default/objects/Finding__c/fields/Reference_Source__c.field-meta.xml
<CustomField>
    <fullName>Reference_Source__c</fullName>
    <description>Reference Source</description>
    <inlineHelpText>Reference Source</inlineHelpText>
    <label>Reference Source</label>
    <type>TextArea</type>
</CustomField>